--- a/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.html
@@ -8,7 +8,7 @@
   <div *ngFor="let post of posts | paginate: {
     itemsPerPage: 4,
     currentPage: page,
-    totalItems: posts.length }" fxLayout="row">
+    totalItems: pageSize }" fxLayout="row">
     <mat-card fxFlex="100" [@fadeIn]="fadeIn" style="margin-bottom: 50px;" *ngIf="!mobile">
       <div fxLayout="column">
         <div fxLayout="row">
@@ -35,6 +35,14 @@
         <div fxLayout="row" fxLayoutAlign="start center">
           <div fxFlex class="line-col3"></div>
         </div>
+        <div fxLayout="row" fxLayoutAlign="end center">
+          <button *ngIf="logged" mat-icon-button aria-label="editar" (click)="pageEditPost(post._id)">
+            <mat-icon style="color:#5a5858">&#xE254;</mat-icon>
+          </button>
+          <button *ngIf="logged" mat-icon-button (click)="openSnackBarDelete(post._id)">
+            <mat-icon style="color:#d63150">&#xE92B;</mat-icon>
+          </button>
+        </div>
         <div fxLayout="row" class="post-footer">
           <div fxLayoutAlign="start center" fxFlex="70">
             <div fxLayout="column">
@@ -57,24 +65,6 @@
               <span> de {{post.date | date: 'yyyy'}}</span>
               <span> por {{post.author.name}}</span>
             </span>
-          </div>
-
-          <!-- <div fxLayoutAlign="end initial" fxFlex="30">
-            <button-shared [idPost]="post._id"></button-shared>
-          </div> -->
-        </div>
-        <div fxLayout="row" fxLayoutAlign="end center">
-          <div fxLayout="column">
-            <div fxLayout="row" fxLayoutAlign="end center">
-              <div fxFlex>
-                <button *ngIf="logged" mat-icon-button aria-label="editar" (click)="pageEditPost(post._id)">
-                  <mat-icon style="color:#5a5858">&#xE254;</mat-icon>
-                </button>
-                <button *ngIf="logged" mat-icon-button (click)="openSnackBarDelete(post._id)">
-                  <mat-icon style="color:#d63150">&#xE92B;</mat-icon>
-                </button>
-              </div>
-            </div>
           </div>
         </div>
       </mat-card-actions>
