--- a/BlogTravelWebApp/src/app/pages/home/home.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/home.component.html
@@ -26,7 +26,8 @@
           <app-facebook></app-facebook>
           <app-youtube></app-youtube>
           <app-spotify></app-spotify>   
-          <app-snapchat></app-snapchat>     
+          <app-snapchat></app-snapchat>
+          <app-contact-email></app-contact-email>     
         </div>
       </div>
       <div fxFlex.md="20" fxFlex.lg="20" fxFlex.xl="40">
