--- a/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/contact-dialog/contact-dialog.component.html
+++ b/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/contact-dialog/contact-dialog.component.html
@@ -1,17 +1,18 @@
 <h4 md-dialog-title class="container padding-bottom-10">
   <div fxLayout="row" fxFlex>
-    <span fxFlex class="txt-header" fxLayoutAlign="start center">
-      Contato
-    </span>
-    <button mat-icon-button mat-dialog-close>
-      <mat-icon>close</mat-icon>
-    </button>
+    <div fxLayout="column">
+      <span fxFlex class="txt-header" fxLayoutAlign="start center">
+        Escreva para o ThaisTrindade, sua opinião é muito importante para mim
+      </span>
+    </div>
+    <div fxFlex fxLayoutAlign="end center">
+      <button mat-icon-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
   </div>
 </h4>
 <div mat-dialog-content>
-  <div fxLayout="row" fxLayoutWrap class="container padding-bottom-10">
-    <span fxFlex="100">Escreva para o ThaisTrindade, sua opinião é muito importante para mim. <br />Se preferir, mande um email para thaistrindade25@hotmail.com</span>
-  </div>
   <div [formGroup]="form">
     <div fxLayout="row" fxLayoutWrap>
       <div fxFlex="100" fxLayoutWrap>
