--- a/BlogTravelWebApp/src/app/pages/home/components/facebook/facebook.component.css
+++ b/BlogTravelWebApp/src/app/pages/home/components/facebook/facebook.component.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500,700');
 
-.facebook {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.6em;
-    text-align: center;
-    text-transform: uppercase;
-    color: #fff;
-    background-color: #1bbc9b;
-    margin: 0px;
-    border-radius: 1px;
-}
+.plugin {
+    padding: 2px;
+  }
