--- a/BlogTravelWebApp/src/app/pages/home/components/facebook/facebook.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/facebook/facebook.component.html
@@ -1,8 +1,10 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="padding-left: 40px;margin-bottom: 45px;">
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80" style="overflow: hidden;">
     <div fxLayout="column">
-      <h2 class="facebook">Facebook</h2>
-      <fb-page href="https://www.facebook.com/trindadethaiss">Facebook</fb-page>
+      <h2 class="container-info">Facebook</h2>
+      <div class="plugin">
+        <fb-page href="https://www.facebook.com/trindadethaiss">Facebook</fb-page>
+      </div>
     </div>
   </div>
 </div>
