--- a/BlogTravelWebApp/src/app/pages/home/components/instagram/instagram.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/instagram/instagram.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="padding-left: 40px;">
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <div fxLayout="column">
-      <h2 class="instagram">Instagram</h2>
+      <h2 class="container-info">Instagram</h2>
       <div class="plugin">
         <script src="//lightwidget.com/widgets/lightwidget.js"></script>
         <iframe src="//lightwidget.com/widgets/690b654ac7f45c0aa9ab9aeaac0f0f9b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget"
