--- a/BlogTravelWebApp/src/app/pages/home/components/snapchat/snapchat.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/snapchat/snapchat.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="padding-left: 40px;">
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <div fxLayout="column">
-      <h2 class="snapchat">Snapchat</h2>
+      <h2 class="container-info">Snapchat</h2>
       <img src="../../../assets/images/snapchat.jpg" 
            style="max-height: 100%;max-width: 100%;width: auto;  
                   height: auto;box-shadow: 0 29px 32px -28px rgba(0,0,0,0.5);
