--- a/BlogTravelWebApp/src/app/pages/home/components/spotify/spotify.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/spotify/spotify.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="padding-left: 40px;margin-bottom: 45px;">
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <div fxLayout="column">
-      <h2 class="spotify">Spotify</h2>
+      <h2 class="container-info">Spotify</h2>
       <div class="plugin">
       <iframe src="https://open.spotify.com/embed?uri=spotify:user:trindadethais:playlist:15nITBPmD8QztqTNEcVY36&theme=white" frameborder="0" allowtransparency="true"
               style="width: 100%; border: 0; overflow: hidden;height: 340px; margin-top:20x;"></iframe> 
