--- a/BlogTravelWebApp/src/app/pages/home/components/youtube/youtube.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/youtube/youtube.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="padding-left: 40px; margin-bottom: 45px;">
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <div fxLayout="column">
-      <h2 class="youtube">Youtube</h2>
+      <h2 class="container-info">Youtube</h2>
       <ngu-carousel [inputs]="carouselOne" class="carousel">
         <ngu-item NguCarouselItem>
           <a href="https://www.youtube.com/watch?v=x76zhIOGOzA&t=36s">
