--- a/BlogTravelWebApp/src/app/pages/home/home.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/home.component.html
@@ -22,12 +22,12 @@
             <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80" class="line-col3"></div>
           </div>
           <app-info-cristian></app-info-cristian>
+          <app-user-notification-email></app-user-notification-email> 
           <app-instagram></app-instagram>
           <app-facebook></app-facebook>
           <app-youtube></app-youtube>
           <app-spotify></app-spotify>   
-          <app-snapchat></app-snapchat>
-          <app-contact-email></app-contact-email>     
+          <app-snapchat></app-snapchat>    
         </div>
       </div>
       <div fxFlex.md="20" fxFlex.lg="20" fxFlex.xl="40">
